example: Fix visibility

--- a/example/src/app/globals.css
+++ b/example/src/app/globals.css
@@ -10,9 +10,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 243, 243, 243;
+    --background-start-rgb: 20, 20, 20;
+    --background-end-rgb: 50, 50, 50;
   }
 }
 
